fix font not showing up on mobile and fix background attachment image login

--- a/client/src/sass/_mediaqueries.scss
+++ b/client/src/sass/_mediaqueries.scss
@@ -59,19 +59,7 @@ $breakpoint-tablet: 1075px;
     }
   }
 
-  .login__image {
-    position: fixed;
-    background-attachment: fixed;
-  }
-
-  .form__container {
-    background-color: white;
-    margin-top: 30vh !important;
-    z-index: 5;
-  }
-
   .menu__modal {
-    position: fixed;
     z-index: 2 !important;
   }
 
@@ -283,23 +271,40 @@ $breakpoint-tablet: 1075px;
   .login {
     display: flex;
     flex-direction: column;
-    background-attachment: local;
+    position: relative;
+    min-height: auto;
+
+    &__background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background-image: url("../assets/backgrounds/login.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: top;
+    }
 
     &__image {
-      width: 100%;
-      height: 30vh;
-      max-height: 30vh;
-      min-height: 30vh;
+      background-image: none;
+      background-attachment: fixed;
+      max-height: 16vh;
+      min-height: 16vh;
+      margin-bottom: 5rem;
     }
   }
 
   .form__container {
     border-top: 1px solid black;
     width: 100%;
-    margin-top: 0px;
+    background-color: white;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     height: auto;
+    position: relative;
+    margin-top: 0px;
 
     .form {
       margin-top: 5rem;
