--- a/client/src/sass/_resets.scss
+++ b/client/src/sass/_resets.scss
@@ -62,9 +62,6 @@ td {
   margin: 0;
   padding: 0;
   border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
 }
 
 ul,
