--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -9,16 +9,14 @@ $dark_grey: #8c9199;
 
 // ----------- TYPOGRAPHY
 
-$luxora: "Luxora Grotesk", sans-serif;
+$luxora: "Clash Grotesk", sans-serif;
 
-@font-face {
-  font-family: $luxora;
-  src: url("../assets/fonts/LuxoraGrotesk-Bold.woff2") format("woff2"),
-    url("../assets/fonts/LuxoraGrotesk-Bold.woff") format("woff"),
-    url("../assets/fonts/LuxoraGrotesk-Bold.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: $luxora;
+//   src: url("../assets/fonts/LuxoraGrotesk-Bold.woff2") format("woff2"),
+//     url("../assets/fonts/LuxoraGrotesk-Bold.woff") format("woff"),
+//     url("../assets/fonts/LuxoraGrotesk-Bold.ttf") format("truetype");
+// }
 
 .rainbow__button {
   margin-top: 10px;
