--- a/client/src/sass/global.scss
+++ b/client/src/sass/global.scss
@@ -18,13 +18,14 @@ canvas {
 
 h1 {
   font-size: 30px;
-  font-weight: 700;
+  font-weight: 600;
   font-family: $luxora;
 }
 
 h2 {
   color: $dark-grey;
   font-weight: 500;
+  font-family: $luxora;
 }
 
 svg {
